# smart-lightning

./: .gitignore  CMakeLists.txt  README.md  config.json  hand_gesture_server.py  requirements.txt
include/: CameraProcessor.h  ConfigManager.h  GestureRecognizer.h  HttpClient.h  HumanDetector.h  PythonInterpreterGuard.h  SystemState.h  wrapper.h
models/: gesture_classifier.onnx  gesture_model.joblib  label_encoder.joblib
src/: CameraProcessor.cpp  ConfigManager.cpp  GestureRecognizer.cpp  HttpClient.cpp  HumanDetector.cpp  main.cpp  wrapper.cpp
